Adds networks connectivity check and sets orientation to portrait only